[package]
name = "rust-victoria-benchmark"
version = "0.1.0"
authors = ["Wojciech Bartnik <yisonPylkita@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
# tokio = { version = "1", features = ["full"] }
uuid = "0.8"
threadpool = "1.0"
rand = "0.8.3"

[profile.release]
codegen-units = 1
lto = "thin"
