[package]
name = "rust-victoria-benchmark"
version = "0.1.0"
authors = ["Wojciech Bartnik <yisonPylkita@gmail.com>"]
edition = "2018"

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
uuid = "0.8"
threadpool = "1.0"
rand = "0.8.3"

[profile.release]
codegen-units = 1
lto = "thin"
